--- a/views/paginas/ofertas.hbs
+++ b/views/paginas/ofertas.hbs
@@ -2,10 +2,10 @@
     <div class="col">
         <div class="card text-dark bg-warning mb-3">
             <div class="card-body">
-                <h5 class="display-6">Warning card title <span class="badge bg-danger text-dark">-100%</span></h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
+                <h5 class="display-4">Pan de Muerto <span class="badge bg-danger text-dark">-100%</span></h5>
+                <h3 class="card-text">
+                    Por exceso de stock en todas nuestras panaderias ¡Todo el pan de muerto es gratis!
+                </h3>
             </div>
         </div>
     </div>
@@ -13,10 +13,10 @@
     <div class="col">
         <div class="card text-dark bg-warning mb-3">
             <div class="card-body">
-                <h5 class="display-6">Warning card title <span class="badge bg-danger text-dark">-100%</span></h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
+                <h5 class="display-4">Pastel de fresa <span class="badge bg-dark text-light">-20%</span></h5>
+                <h3 class="card-text">
+                    Pastel de frea con descuento en la sucursal principal
+                </h3>
             </div>
         </div>
     </div>
@@ -24,10 +24,10 @@
     <div class="col">
         <div class="card text-dark bg-warning mb-3">
             <div class="card-body">
-                <h5 class="display-6">Warning card title <span class="badge bg-danger text-dark">-100%</span></h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
+                <h5 class="display-4">Secreto <span class="badge bg-danger text-dark">NUEVO</span></h5>
+                <h3 class="card-text">
+                    Acerquuese a cualquier sucursal y pida el pastel 5455 ¿Se atreve?
+                </h3>
             </div>
         </div>
     </div>
@@ -35,10 +35,10 @@
     <div class="col">
         <div class="card text-dark bg-warning mb-3">
             <div class="card-body">
-                <h5 class="display-6">Warning card title <span class="badge bg-danger text-dark">-100%</span></h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
+                <h5 class="display-4">Donasss <span class="badge bg-danger text-dark">-50%</span></h5>
+                <h3 class="card-text">
+                    Todas las donas a mitad de precio
+                </h3>
             </div>
         </div>
     </div>
