--- a/views/plantillas/main.hbs
+++ b/views/plantillas/main.hbs
@@ -20,9 +20,16 @@
             de fondo o si hay problemas para cargarla */
             background-color: #66999;
 
+
         }
-        .card{
-            padding:0.01rem
+
+        .card {
+            padding: 0.01rem
+        }
+
+
+        .carousel-inner {
+            height: 30rem;
         }
     </style>
 
@@ -35,10 +42,8 @@
     <br>
     {{{ body }}}
     <!-- quiere decir que el cuerpo se reemplazara por TODOS los laypouts exepto partials -->
-
-    <script src="/js/jquery-3.3.1.js"></script>
-
-    <script src="/js/bootstrap.min.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 
 </html>
